# avataa-layers

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: .flake8  alembic.ini  database.py  init_app.py  main.py  models.py
app/common/: initializers.py
app/config/: app_config.py  database_config.py  documentation_config.py  minio_config.py  security_config.py  test_config.py
app/folder_router/: exceptions.py  processors.py  router.py  schemas.py  utils.py
app/layers_router/: constants.py  exceptions.py  processors.py  router.py  schemas.py  utils.py
app/migrations/: env.py
app/migrations/versions/: 17_12_2024__16_57___addedd_folder_and_layer_models.py  30_12_2024__13_32___removed_parent_id_from_layer.py
app/services/security_service/: security.py  security_data_models.py  security_interface.py
app/services/security_service/implementation/: keycloak.py
app/services/security_service/implementation/utils/: user_info_cache.py
app/services/storage_service/: utils.py
tests/: conftest.py  docker-compose.yml  test_requirements.txt
tests/test_routers/: test_folders.py  test_layers.py
